# alds

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: verify.yml
.verify-helper/: timestamps.remote.json
archive/: lib.rs
archive/graph/: dfs.rs  dijkstra.rs  utility_csr.rs
archive/heap/: d_ary_heap.rs  mod.rs  pairing_heap2.rs
archive/math/: gcd_lcm.rs
archive/range_query/: fenwick_tree.rs  segment_tree.rs  sparse_table.rs
book/: book.toml
book/src/: SUMMARY.md  bit.md  fast_io.md  misc.md  recommend.md
book/src/range_query/: fenwick.md
book/src/tree/: euler_tour.md  squaring.md
crates/bit_set/: Cargo.toml
crates/bit_set/src/: lib.rs
crates/combinatorics/: Cargo.toml
crates/combinatorics/src/: lib.rs  permutation.rs
crates/fast_io/: Cargo.toml
crates/fast_io/examples/: many_aplusb.rs  many_aplusb_128bit.rs
crates/fast_io/src/: fast_in.rs  fast_write.rs  from_bytes.rs  input.rs  input_macro.rs  into_bytes.rs  lib.rs  parser.rs  reader.rs  token.rs  write.rs
crates/fenwick_tree/: Cargo.toml
crates/fenwick_tree/examples/: binary_search.rs  point_add_range_sum.rs
crates/fenwick_tree/src/: lib.rs
crates/math-traits/: Cargo.toml
crates/math-traits/src/: gcd_lcm.rs  lib.rs  macros.rs
crates/mod_int/: Cargo.toml
crates/mod_int/src/: barret_dynamic_modint.rs  inv_gcd.rs  lib.rs  macros.rs  montgomery_dynamic_modint.rs  static_modint.rs
crates/seg_lib/: Cargo.toml
crates/seg_lib/examples/: assign-range_set_range_composite.rs  dual-range_affine_point_get.rs  dynamic-point_set_range_composite_large_array.rs  lazy-range_affine_range_sum.rs  normal-point_add_range_sum.rs
crates/seg_lib/src/: assign.rs  dual.rs  dynamic.rs  lazy.rs  lib.rs  normal.rs  traits.rs
crates/segment_tree/: Cargo.toml
crates/segment_tree/src/: assign.rs  dual.rs  dynamic.rs  lazy.rs  lib.rs  monoid.rs  normal.rs  traits.rs
crates/sieve_of_eratosthenes/: Cargo.toml
crates/sieve_of_eratosthenes/examples/: enumerate_primes.rs
crates/sieve_of_eratosthenes/src/: lib.rs
crates/sparse_table/: Cargo.toml
crates/sparse_table/examples/: disjoint-static_range_sum.rs  disjoint-static_rmq.rs  normal-static_rmq.rs  sqrt-static_range_sum.rs
crates/sparse_table/src/: disjoint.rs  lib.rs  normal.rs  sqrt.rs  traits.rs
crates/string/z_algorithm/: Cargo.toml
crates/tree/compressed_sparse_row/: Cargo.toml
crates/tree/csr/: Cargo.toml
crates/tree/csr/src/: lib.rs
crates/tree/euler_tour/: Cargo.toml
crates/tree/euler_tour/src/: lib.rs
crates/tree/lca/: Cargo.toml
crates/tree/lca/examples/: least_common_ancestor.rs
crates/tree/lca/src/: lib.rs
crates/union_find/: Cargo.toml
crates/union_find/examples/: potental-unionfind_with_potential_non_commutative_group.rs  potential-unionfind_with_potential.rs  potential-unionfind_with_potential_non_commutative_group.rs
crates/union_find/src/: lib.rs  normal.rs  potential.rs
crates/wide_segment_tree/: Cargo.toml
crates/wide_segment_tree/src/: lib.rs
examples/: ds-point_add_range_sum-lazy_seg_tree.rs  ds-point_add_range_sum-seg_tree.rs  ds-point_set_range_composit-lazy_seg_tree.rs  ds-point_set_range_composite-lazy_seg_tree.rs  ds-point_set_range_composite_large_array-dyn_seg.rs  ds-range_affine_point_get-dual_seg_tree.rs  ds-range_affine_point_get-lazy_seg_tree.rs  ds-range_affine_range_sum-lazy_seg_tree.rs  ds-range_set_range_composite-assign_seg.rs  ds-range_set_range_composite-lazy_seg.rs  ds-static_rmq-seg_tree.rs  ds-unionfind-ppuf.rs  ds-unionfind-uf.rs  ds-unionfind-ufp.rs  ds-unionfind_with_potentail-ufp.rs  ex-many_aplusb.rs  mod_log_barret.rs  nt-discrete_logarithm_mod-b.rs  sample-aplusb.rs  uf_ufp.rs  union_find_with_potential.rs
src/: lib.rs  modint.rs  union_find.rs
src/container/: binomial_heap.rs  mod.rs
src/graph/: dfs.rs  dijkstra.rs  mod.rs  utility_csr.rs  utility_edge.rs
src/heap/: binomial_heap.rs  d_ary_heap.rs  mod.rs  pairing_heap.rs  quad_heap.rs
src/math/: gcd_lcm.rs  mod.rs  permutation.rs
src/modint/: barret_dynamic_modint.rs  inv_gcd.rs  macros.rs  mod.rs  montgomery_dynamic_modint.rs  static_modint.rs
src/persistent_collections/: mod.rs  vector.rs
src/range_query/: disjoint_sparse_table.rs  fenwick_tree.rs  mo_alg.rs  mod.rs  segment_tree.rs  sparse_table.rs
src/union_find/: mod.rs  normal.rs  partially_persistent.rs  persistent.rs  potential.rs  weighted.rs
