[package]
name = "alds"
version = "0.1.0"
edition = "2021"

[workspace.package]
author = ["qdot3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qdot3/alds"
readme = "README.md"
keywords = ["algorithms", "data-structures"]
categories = ["algorithms", "data-structures"]
publish = false

[dependencies]
proconio = { version = "=0.4.3", features = ["derive"] }

[workspace.dependencies]
proconio = { version = "=0.4.3", features = ["derive"] }

[workspace]
members = [
    "crates/mod_int",
    "crates/seg_lib",
    "crates/sparse_table",
    "crates/union_find",
]

exclude = [
    "/archive",
    "/target"
]
