[workspace.package]
author = ["qdot3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qdot3/alds"
readme = "README.md"
keywords = ["algorithms", "data-structures"]
categories = ["algorithms", "data-structures"]
publish = false

[workspace.dependencies]
proconio = { version = "=0.5.0", features = ["derive"] }

[workspace]
members = [
    # io
    "crates/fast_io",

    # utility
    "crates/math-traits",

    # will be separated
    "crates/mod_int",
    "crates/seg_lib",
    "crates/sparse_table",
    "crates/union_find",
    "crates/combinatorics",

    # range query
    "crates/fenwick_tree",
    "crates/wide_segment_tree",

    "crates/tree/csr",
    "crates/tree/lca",
    "crates/tree/euler_tour",
]

exclude = [
    "/archive",
    "/target",
    "/book",
]
