[package]
name = "fenwick_tree"
version = "0.1.0"
edition = "2021"

author.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math-traits = { path = "../math-traits" }

[dev-dependencies]
proconio = { workspace = true }