[package]
name = "math-traits"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

