[package]
name = "mod_int"
version = "0.1.0"
edition = "2021"

author.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
rustc-hash = "2.1.1"

[dev-dependencies]
proconio = { workspace = true }

[lib]
name = "mod_int"