[package]
name = "sparse_table"
version = "0.1.0"
edition = "2021"

author.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]

[dev-dependencies]
proconio = { workspace = true }

[lib]
name = "sparse_table"