[package]
name = "union_find"
version = "0.1.0"
edition = "2021"

author.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]

[dev-dependencies]
mod_int = { path = "../mod_int" }
proconio = { workspace = true }

[lib]
name = "union_find"